Aggiunta tab LogService alla dashboard e correzioni per Pydantic v2

--- a/web/templates/search.html
+++ b/web/templates/search.html
@@ -14,8 +14,9 @@
         <nav>
             <ul>
                 <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/dashboard/search">Ricerca</a></li>
+                <li><a href="/dashboard/search" class="active">Ricerca</a></li>
                 <li><a href="/dashboard/stats">Statistiche</a></li>
+                <li><a href="/dashboard/logservice">LogService</a></li>
                 <li><a href="/dashboard/settings">Impostazioni</a></li>
             </ul>
         </nav>
