--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -14,9 +14,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="/dashboard">Dashboard</a></li>
+                <li><a href="/dashboard" class="active">Dashboard</a></li>
                 <li><a href="/dashboard/search">Ricerca</a></li>
                 <li><a href="/dashboard/stats">Statistiche</a></li>
+                <li><a href="/dashboard/logservice">LogService</a></li>
                 <li><a href="/dashboard/settings">Impostazioni</a></li>
             </ul>
         </nav>
